added classes and ids grabbed from dom

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                     Meal Name:
                     <input type="text" name="meal-name" id="meal-name">
                 </label>
-                <button id="save-recepieBtn">Save</button>
+                <button id="save-recipeBtn">Save</button>
             </form>
         </section>
-        <section class="saved-recepie-list">
-            <ul id="saved-recepie-list"></ul>
+        <section class="saved-recipe-list">
+            <ul id="saved-recipe-list"></ul>
         </section>
     </main>
     <script type="module" src="./app.js"></script>
