added test and passing function for renderMeal changed all recipes to meal to make more sense

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <button id="save-recipeBtn">Save</button>
             </form>
         </section>
-        <section class="saved-recipe-list">
-            <ul id="saved-recipe-list"></ul>
+        <section class="saved-meal-list">
+            <ul id="saved-meal-list"></ul>
         </section>
     </main>
     <script type="module" src="./app.js"></script>
