added event listener for savemeals form

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     Meal Name:
                     <input type="text" name="meal-name" id="meal-name">
                 </label>
-                <button id="save-recipeBtn">Save</button>
+                <button id="save-mealBtn">Save</button>
             </form>
         </section>
         <section class="saved-meal-list">
