added form reset to meal name

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
         <section>
             <h3>Save Your Masterpiece</h3>
-            <form>
+            <form id="meal-name-form">
                 <label>
                     Meal Name:
                     <input type="text" name="meal-name" id="meal-name">
